--- a/FAR/FAR.vcxproj
+++ b/FAR/FAR.vcxproj
@@ -122,7 +122,9 @@ if "$(Configuration)" == "Debug" (
 xcopy "$(ProjectDir)dependencies\assimp\lib\$(Configuration)\assimp-vc143-mtd.dll" "$(OutDir)" /Y
 ) else (
 xcopy "$(ProjectDir)dependencies\assimp\lib\$(Configuration)\assimp-vc143-mt.dll" "$(OutDir)" /Y
-)</Command>
+)
+
+xcopy "$(ProjectDir)assets" "$(OutDir)assets" /I /S /Y</Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -133,16 +135,30 @@ xcopy "$(ProjectDir)dependencies\assimp\lib\$(Configuration)\assimp-vc143-mt.dll
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>$(ProjectDir)dependencies\GLFW\include;$(ProjectDir)dependencies\GLEW\include;$(ProjectDir)dependencies\assimp\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(ProjectDir)dependencies\GLFW\include;$(ProjectDir)dependencies\GLEW\include;$(ProjectDir)dependencies\assimp\include;$(ProjectDir)dependencies\glm\;$(ProjectDir)dependencies\stb\;$(ProjectDir)src;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <LanguageStandard>stdcpp20</LanguageStandard>
+      <PrecompiledHeader>Create</PrecompiledHeader>
+      <PrecompiledHeaderFile>PCH.hpp</PrecompiledHeaderFile>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalLibraryDirectories>$(ProjectDir)dependencies\GLEW\lib\Release\x64;$(ProjectDir)dependencies\GLFW\lib\Debug;$(ProjectDir)dependencies\assimp\lib\Release;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
-      <AdditionalDependencies>glew32.lib;glfw3.lib;assimp-vc143-mtd.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>$(ProjectDir)dependencies\GLEW\lib\Release\x64;$(ProjectDir)dependencies\GLFW\lib\Debug;$(ProjectDir)dependencies\assimp\lib\$(Configuration);%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalDependencies>opengl32.lib;glew32.lib;glfw3.lib;assimp-vc143-mt.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
+    <PostBuildEvent>
+      <Command>xcopy "$(ProjectDir)dependencies\GLEW\lib\Release\x64\glew32.dll" "$(OutDir)" /Y
+
+if "$(Configuration)" == "Debug" (
+xcopy "$(ProjectDir)dependencies\assimp\lib\$(Configuration)\assimp-vc143-mtd.dll" "$(OutDir)" /Y
+) else (
+xcopy "$(ProjectDir)dependencies\assimp\lib\$(Configuration)\assimp-vc143-mt.dll" "$(OutDir)" /Y
+)
+
+xcopy "$(ProjectDir)assets" "$(OutDir)assets" /I /S /Y</Command>
+    </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="src\Engine\Engine.cpp" />
@@ -153,6 +169,10 @@ xcopy "$(ProjectDir)dependencies\assimp\lib\$(Configuration)\assimp-vc143-mt.dll
     <ClInclude Include="src\Engine\Engine.hpp" />
     <ClInclude Include="src\Engine\Render.hpp" />
     <ClInclude Include="src\PCH.hpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="assets\shaders\Basic.frag" />
+    <None Include="assets\shaders\Basic.vert" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
