--- a/FAR/FAR.vcxproj.filters
+++ b/FAR/FAR.vcxproj.filters
@@ -36,4 +36,8 @@
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="assets\shaders\Basic.vert" />
+    <None Include="assets\shaders\Basic.frag" />
+  </ItemGroup>
 </Project>
