--- a/FAR/FAR.vcxproj
+++ b/FAR/FAR.vcxproj
@@ -162,13 +162,27 @@ xcopy "$(ProjectDir)assets" "$(OutDir)assets" /I /S /Y</Command>
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="src\Engine\Engine.cpp" />
-    <ClCompile Include="src\Engine\Render.cpp" />
+    <ClCompile Include="src\Resources\InputResource.cpp" />
+    <ClCompile Include="src\Resources\WindowResource.cpp" />
+    <ClCompile Include="src\Systems\Input\InputSystem.cpp" />
+    <ClCompile Include="src\Systems\Render\Render.cpp" />
     <ClCompile Include="src\main.cpp" />
+    <ClCompile Include="src\Systems\Sandbox\Sandbox.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="src\Components\Camera.hpp" />
+    <ClInclude Include="src\Components\Model.hpp" />
+    <ClInclude Include="src\Components\Transform.hpp" />
     <ClInclude Include="src\Engine\Engine.hpp" />
-    <ClInclude Include="src\Engine\Render.hpp" />
+    <ClInclude Include="src\Resources\InputResource.h" />
+    <ClInclude Include="src\Resources\iResource.hpp" />
+    <ClInclude Include="src\Resources\KeyCodes.hpp" />
+    <ClInclude Include="src\Resources\WindowResource.hpp" />
+    <ClInclude Include="src\Systems\Input\InputSystem.hpp" />
+    <ClInclude Include="src\Systems\iSystem.hpp" />
+    <ClInclude Include="src\Systems\Render\Render.hpp" />
     <ClInclude Include="src\PCH.hpp" />
+    <ClInclude Include="src\Systems\Sandbox\Sandbox.hpp" />
   </ItemGroup>
   <ItemGroup>
     <None Include="assets\shaders\Basic.frag" />
