--- a/FAR/FAR.vcxproj
+++ b/FAR/FAR.vcxproj
@@ -163,6 +163,7 @@ xcopy "$(ProjectDir)assets" "$(OutDir)assets" /I /S /Y</Command>
   <ItemGroup>
     <ClCompile Include="src\Engine\Engine.cpp" />
     <ClCompile Include="src\Resources\InputResource.cpp" />
+    <ClCompile Include="src\Resources\RenderResource.cpp" />
     <ClCompile Include="src\Resources\WindowResource.cpp" />
     <ClCompile Include="src\Systems\Input\InputSystem.cpp" />
     <ClCompile Include="src\Systems\Render\Render.cpp" />
@@ -177,6 +178,7 @@ xcopy "$(ProjectDir)assets" "$(OutDir)assets" /I /S /Y</Command>
     <ClInclude Include="src\Resources\InputResource.h" />
     <ClInclude Include="src\Resources\iResource.hpp" />
     <ClInclude Include="src\Resources\KeyCodes.hpp" />
+    <ClInclude Include="src\Resources\RenderResource.hpp" />
     <ClInclude Include="src\Resources\WindowResource.hpp" />
     <ClInclude Include="src\Systems\Input\InputSystem.hpp" />
     <ClInclude Include="src\Systems\iSystem.hpp" />
@@ -187,6 +189,8 @@ xcopy "$(ProjectDir)assets" "$(OutDir)assets" /I /S /Y</Command>
   <ItemGroup>
     <None Include="assets\shaders\Basic.frag" />
     <None Include="assets\shaders\Basic.vert" />
+    <None Include="assets\shaders\Ray.frag" />
+    <None Include="assets\shaders\Ray.vert" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
