--- a/FAR/FAR.vcxproj
+++ b/FAR/FAR.vcxproj
@@ -165,6 +165,7 @@ xcopy "$(ProjectDir)assets" "$(OutDir)assets" /I /S /Y</Command>
     <ClCompile Include="src\Resources\InputResource.cpp" />
     <ClCompile Include="src\Resources\RenderResource.cpp" />
     <ClCompile Include="src\Resources\WindowResource.cpp" />
+    <ClCompile Include="src\Systems\Animation\SkeletalAnimation.cpp" />
     <ClCompile Include="src\Systems\Input\InputSystem.cpp" />
     <ClCompile Include="src\Systems\Render\Render.cpp" />
     <ClCompile Include="src\main.cpp" />
@@ -173,6 +174,7 @@ xcopy "$(ProjectDir)assets" "$(OutDir)assets" /I /S /Y</Command>
   <ItemGroup>
     <ClInclude Include="src\Components\Camera.hpp" />
     <ClInclude Include="src\Components\Model.hpp" />
+    <ClInclude Include="src\Components\SkeletalAnimator.hpp" />
     <ClInclude Include="src\Components\Transform.hpp" />
     <ClInclude Include="src\Engine\Engine.hpp" />
     <ClInclude Include="src\Resources\InputResource.h" />
@@ -180,6 +182,7 @@ xcopy "$(ProjectDir)assets" "$(OutDir)assets" /I /S /Y</Command>
     <ClInclude Include="src\Resources\KeyCodes.hpp" />
     <ClInclude Include="src\Resources\RenderResource.hpp" />
     <ClInclude Include="src\Resources\WindowResource.hpp" />
+    <ClInclude Include="src\Systems\Animation\SkeletalAnimation.hpp" />
     <ClInclude Include="src\Systems\Input\InputSystem.hpp" />
     <ClInclude Include="src\Systems\iSystem.hpp" />
     <ClInclude Include="src\Systems\Render\Render.hpp" />
