custom quat class

--- a/FAR/FAR.vcxproj
+++ b/FAR/FAR.vcxproj
@@ -226,6 +226,7 @@ xcopy "$(ProjectDir)assets" "$(OutDir)assets" /I /S /Y</Command>
     <ClInclude Include="src\Systems\Render\Render.hpp" />
     <ClInclude Include="src\PCH.hpp" />
     <ClInclude Include="src\Systems\Sandbox\Sandbox.hpp" />
+    <ClInclude Include="src\Util\Quaternion.hpp" />
     <ClInclude Include="src\Util\VQS.hpp" />
   </ItemGroup>
   <ItemGroup>
