--- a/FAR/FAR.vcxproj
+++ b/FAR/FAR.vcxproj
@@ -106,7 +106,7 @@
       <ConformanceMode>true</ConformanceMode>
       <AdditionalIncludeDirectories>$(ProjectDir)dependencies\GLFW\include;$(ProjectDir)dependencies\GLEW\include;$(ProjectDir)dependencies\assimp\include;$(ProjectDir)dependencies\glm\;$(ProjectDir)dependencies\stb\;$(ProjectDir)src;$(ProjectDir)dependencies\imgui;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <PrecompiledHeader>Create</PrecompiledHeader>
-      <PrecompiledHeaderFile>PCH.hpp</PrecompiledHeaderFile>
+      <PrecompiledHeaderFile>PCH/PCH.hpp</PrecompiledHeaderFile>
       <LanguageStandard>stdcpp20</LanguageStandard>
     </ClCompile>
     <Link>
@@ -138,7 +138,7 @@ xcopy "$(ProjectDir)assets" "$(OutDir)assets" /I /S /Y</Command>
       <AdditionalIncludeDirectories>$(ProjectDir)dependencies\GLFW\include;$(ProjectDir)dependencies\GLEW\include;$(ProjectDir)dependencies\assimp\include;$(ProjectDir)dependencies\glm\;$(ProjectDir)dependencies\stb\;$(ProjectDir)src;$(ProjectDir)dependencies\imgui;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <LanguageStandard>stdcpp20</LanguageStandard>
       <PrecompiledHeader>Create</PrecompiledHeader>
-      <PrecompiledHeaderFile>PCH.hpp</PrecompiledHeaderFile>
+      <PrecompiledHeaderFile>PCH/PCH.hpp</PrecompiledHeaderFile>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -190,6 +190,7 @@ xcopy "$(ProjectDir)assets" "$(OutDir)assets" /I /S /Y</Command>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">NotUsing</PrecompiledHeader>
     </ClCompile>
     <ClCompile Include="src\Engine\Engine.cpp" />
+    <ClCompile Include="src\PCH\STB_Impls.cpp" />
     <ClCompile Include="src\Resources\InputResource.cpp" />
     <ClCompile Include="src\Resources\RenderResource.cpp" />
     <ClCompile Include="src\Resources\WindowResource.cpp" />
@@ -199,6 +200,9 @@ xcopy "$(ProjectDir)assets" "$(OutDir)assets" /I /S /Y</Command>
     <ClCompile Include="src\Systems\Render\Render.cpp" />
     <ClCompile Include="src\main.cpp" />
     <ClCompile Include="src\Systems\Sandbox\Sandbox.cpp" />
+    <ClCompile Include="src\Util\MathHelpers.cpp" />
+    <ClCompile Include="src\Util\Quaternion.cpp" />
+    <ClCompile Include="src\Util\VQS.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="dependencies\imgui\backends\imgui_impl_glfw.h" />
@@ -224,8 +228,9 @@ xcopy "$(ProjectDir)assets" "$(OutDir)assets" /I /S /Y</Command>
     <ClInclude Include="src\Systems\Input\InputSystem.hpp" />
     <ClInclude Include="src\Systems\iSystem.hpp" />
     <ClInclude Include="src\Systems\Render\Render.hpp" />
-    <ClInclude Include="src\PCH.hpp" />
+    <ClInclude Include="src\PCH\PCH.hpp" />
     <ClInclude Include="src\Systems\Sandbox\Sandbox.hpp" />
+    <ClInclude Include="src\Util\MathHelpers.hpp" />
     <ClInclude Include="src\Util\Quaternion.hpp" />
     <ClInclude Include="src\Util\VQS.hpp" />
   </ItemGroup>
@@ -234,6 +239,7 @@ xcopy "$(ProjectDir)assets" "$(OutDir)assets" /I /S /Y</Command>
     <None Include="assets\shaders\Basic.vert" />
     <None Include="assets\shaders\Ray.frag" />
     <None Include="assets\shaders\Ray.vert" />
+    <None Include="src\Engine\Engine.inl" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
