--- a/FAR/FAR.vcxproj.filters
+++ b/FAR/FAR.vcxproj.filters
@@ -78,6 +78,9 @@
     <ClCompile Include="src\Util\MathHelpers.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\Systems\ScriptedMotion\ScriptedMotion.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\Engine\Engine.hpp">
@@ -162,6 +165,12 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="src\Util\MathHelpers.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Components\ScriptedMotionPath.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Systems\ScriptedMotion\ScriptedMotion.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
